--- a/safecommit-extension/package.json
+++ b/safecommit-extension/package.json
@@ -67,6 +67,6 @@
     "@types/node": "^20.11.30",
     "@types/vscode": "^1.85.0",
     "typescript": "^5.6.3",
-    "vsce": "^2.22.0"
+    "@vscode/vsce": "^3.7.1"
   }
 }
