--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-﻿node_modules/
+node_modules/
 .DS_Store
 .env
 .env.*
 safecommit-backend/.env
 safecommit-backend/dist/
 safecommit-extension/out/
+safecommit-extension/node_modules/
+safecommit-backend/node_modules/
+.npmrc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.pnpm-store/
+.turbo/
+.idea/
 .vscode/
+.vs/
+*.log
+.cache/
+.parcel-cache/
+.eslintcache
